clusters/home/apps/harbor/harbor/configs/harbor-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-ingressroute
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://harbor.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Harbor
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: harbor # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Harbor
    #gethomepage.dev/widget.type: "harbor"
    #gethomepage.dev/widget.url: "https://harbor.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`harbor.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: harbor
      port: 80
  tls:
    secretName: harbor-certificate-secret
